<resources>
    <string name="app_name">Rybka</string>

    // ===============================================================================================
    // Dodanie podpisow do wyswietlania pogody i daty z API
    <string name="weather_description">%1$s, %2$s: %3$.1f°C, %4$s</string>
    <string name="weather_error">Nie udało się załadować danych pogodowych.</string>
    // ===============================================================================================

    // ===============================================================================================
    // Przyciski ze strony pierwszej
    <string name="button1_text">Niezbędnik wędkarza</string>
    <string name="button2_text">Zapisz połów</string>
    <string name="button3_text">Wyświetl połowy</string>
    // ===============================================================================================

    // ===============================================================================================
    // Etykiety przyciskow i opisy z ActivityOne
    <string name="bar1">Ryby, łowiska, przynęty</string>
    <string name="bar2">Kalendarz wędkarski</string>
    <string name="bar3">Wiązanie haczyka</string>
    // ===============================================================================================

    // ===============================================================================================
    // ImageViev i TextViev z activity_hook.xml
    <string name="description_image1">Przewlecz końcówkę żyłki przez oczko haczyka.</string>
    <string name="description_image2">Złap oba końce żyłki (część przewleczoną przez oczko i resztę żyłki) i
                                        zrób pętlę tak, aby krzyżowały się, tworząc formę litery "S".</string>
    <string name="description_image3">Przewiń krótszy koniec żyłki wokół dłuższego kilka razy,
                                        przesuwając się w kierunku oczka haczyka.</string>
    <string name="description_image4">Przewlecz końcówkę krótszej żyłki z powrotem przez pętlę blisko oczka haczyka.</string>
    <string name="description_image5">Delikatnie pociągnij za oba końce żyłki, aby zaciągnąć węzeł. Uważaj,
        aby węzeł był równomiernie zaciśnięty i upewnij się, że końcówki są bezpiecznie zabezpieczone.</string>
    <string name="image_description">Opis obrazu</string>
    <string name="title_activity_fish_compose">ActivityFishCompose</string>
    <string name="title_activity_fish_list_screen">FishListScreen</string>
    // ===============================================================================================

    // ===============================================================================================
    //Lista ryb - rozwijana lista -> FishListScreen.kt
    <string name="fish_1">Szczupak</string>
    <string name="fish_2">Sum europejski</string>
    <string name="fish_3">Węgorz europejski</string>
    <string name="fish_4">Leszcz</string>
    <string name="fish_5">Lin</string>
    <string name="fish_6">Wzdręga</string>
    <string name="fish_7">Ukleja</string>
    <string name="fish_8">Karp</string>
    <string name="fish_9">Krąp</string>
    <string name="fish_10">Płoć</string>
    <string name="fish_11">Jaź</string>
    <string name="fish_12">Karaś pospolity</string>
    <string name="more_info">Więcej informacji</string>

    // Opisy ryb z listy rozwijanej -> FishListScreen.kt
    <string name="fish_description_1">Drapieżna ryba słodkowodna, popularna w wędkarstwie sportowym. Na co łowić: woblery, gumowe rybki, obrotówki, wahadłówki, żywe lub martwe rybki.
        Kiedy łapiemy: wiosna i jesień - wczesny ranek i późne popołudnie - preferuje chlodniejszą wode, często przebywa w zaroślach.
        Są to agresywne ryby, które często polują z zasadzki - zalecane przynęty które dobrze imitują ruch ofiary.</string>
    //
    <string name="fish_description_2">Największa ryba słodkowodna w Europie. Na co łowić: woblery, gumowe rybki, duże błyski, rosówki, pijawki, martwe rybki, wątrobę i raki.
        Co je: głównie ryby, ale także raki, żaby, małe ssaki, ptaki wodne i bezkręgowce.
        Kiedy łapiemy: lato i późna wiosna - noc, wczesny poranek i późne popołudnie - preferuje ciepłą wode, dlatego często przebywa w głebokich miejsach z duża liczbą kryjówek.
        Są to drapieżniki żerujące głownie nocą, dlatego najlepsze wyniki osiąga się łowiąc po zmroku.</string>
    //
    <string name="fish_description_3">Ryba słodkowodna, znana z długiego i wężowatego ciała - dosyć popularna wsród wędkarzy.
        Na co łowić: rosówki, pijawki, martwe rybki, kawalki ryb, wątroba.
        Co je: Małe ryby, skorupiaki, owady wodne, dżdżownice, ślimaki.
        Kiedy łapiemy: najlepszy czas to późna wiosna do wczesnej jesieni - noc, wczesny ranek i późny wieczór - preferuje muliste i zacienione miejsca, często przebywa w pobliżu roślinności wodnej.
        Są aktywne głównie nocą, więc wędkowanie po zmroku przynosi najlepsze rezultaty.</string>
    //
    <string name="fish_description_4">Popularna ryba słodkowodna, ceniona przez wędkarzy.
        Na co łowić: czerwone i białe robaki, rosówki, kukurydza, ciasto, kasza manna i groch.
        Co je: głównie bezkręgowce, rośliny wodne i detrytus.
        Kiedy łapiemy: wiosna i lato - wczesny ranek i późne popołudnie - preferuje spokojne, ciepłe wody, często przebywa na mulistym dnie w pobliżu roślinności.
        Są najaktywniejsze przy spokojnej pogodzie, szczególnie przed burzą lub po deszczu, kiedy woda jest dobrze natleniona.</string>
    //
    <string name="fish_description_5">Popularna ryba słodkowodna, ceniona przez wędkarzy za swoje walory smakowe i sportowe.
        Na co łowić: czerwone i białe robaki, rosówki, kukurydza, ciasto, ziarna zbóż (pszenica i jęczmień) oraz na groch.
        Co je: przeważnie bezkręgowce, ślimaki, detrytus i rośliny wodne.</string>
    Kiedy łapiemy: najlepszy okres to wiosna i lato - wczesny ranek i późne popołudnie - preferuje
    ciepłe, spokojne wody z bujną roślinnością, często przebywa na mulistym dnie.
    Najbardziej aktywne są w ciepłych miesiącach, a najlepsze wyniki osiąga się łowiąc w miejscach z
    dużą ilością roślinności wodnej.
    //
    <string name="fish_description_6">Znana również jako karaś srebrzysty jest popularną rybą słodkowodną.
        Na co łowić: czerwone i białe robaki, larwy owadów, kukurydza, chleb i ziarna zbóż.
        Co je: głównie rośliny wodne, glony, bezkręgowce i owady.
        Kiedy łapiemy: najlepszy okres to późna wiosna do wczesnej jesieni - cały dzień, szczególnie w ciepłe i słoneczne dni - preferuje spokojne, ciepłe wody.
        Najbardziej są aktywne w cieplejszych miesiącach, a najlepsze wyniki osiąga się, łowiąc w miejscach z bujną roślinnością.</string>
    //
    <string name="fish_description_7">Mała, popularna ryba słodkowodna która często jest używana jako przynęta na większe drapieżniki.
        Na co łowić: czerwone i białe robaki, larwy owadów, małe błyski oraz sztuczne muszki.
        Co je: głównie plankton, małe bezkręgowce, owady, larwy owadów i rośliny wodne.
        Kiedy łapiemy: wiosna i lato - cały dzień, szczególnie aktywne są w ciepłe i słoneczne dni - preferuje czyste, dobrze natlenione wody.
        Najbardziej aktywne są w cieplejszych miesiącach, zwłaszcza w płytkich wodach w pobliżu brzegu.</string>
    //
    <string name="fish_description_8">Popularna ryba słodkowodna, ceniona zarówno w wędkarstwie sportowym jak i w kuchni.
        Na co łowić: robaki, kukurydza, rosówki, kulki proteinowe, pellet, chleb i ziemniaki.
        Co je: głównie rośliny wodne, glony, bezkręgowce i ziarna zbóż.
        Kiedy łapiemy: Wiosna, lato i wczesna jesień - wczesny ranek i późne popołudnie - preferuje ciepłe, spokojne wody z mulistym dnem.
        Najbardziej aktywne są w cieplejszych miesiącach, szczególnie po okresie tarła.</string>
    //
    <string name="fish_description_9">Mniejsza ryba słodkowodna z rodziny karpiowatych, często jest mylona z leszczem.
        Na co łowić: czerwone i białe robaki, ochotka, ciasto, kasza manna i kukurydza.
        Co je: głównie bezkręgowce, rośliny wodne i detrytus.
        Kiedy łapiemy: wiosna i lato - caly dzień, chociaż preferuje się ranek i późne popołudnie - preferuje spokojne, ciepłe wody i muliste dno.
        Najaktywniejsze są przy spokojnej pogodzie, szczególnie w zarośniętych obszarach jezior i rzek.</string>
    //
    <string name="fish_description_10">Powszechnie występująca ryba słodkowodna, popularna w wędkarstwie rekreacyjnym.
        Na co łowić: czerwone i białe robaki, ochotka, larwy owadów, chleb, ciasto, kukurydza i kasza manna.
        Co je: głównie bezkręgowce, rośliny wodne, glony i nasiona.
        Kiedy łapiemy: wiosna, lato i jesień - cały dzień, najlepiej rano i późnym wieczorem - preferuje czyste, spokojne wody, często przebywa w strefie przybrzeżnej z roślinnością.
        Najaktywniejsze w cieplejszych miesiącach i najlepiej łowić je w pobliżu roślinności wodnej, gdzie znajdują dużo pokarmu.</string>
    //
    <string name="fish_description_11">Słodkowodna ryba z rodziny karpiowatych, popularna wśród wędkarzy.
        Na co łowić: czerwone i białe robaki, ochotka, larwy owadów, chleb, kukurydza, ciasto i groch.
        Co je: głównie bezkręgowce, małe ryby, rośliny wodne i glony.
        Kiedy łapiemy: wiosna, lato i wczesna jesień - wczesny ranek i późne popołudnie - preferuje spokojne, dobrze natlenione wody, często przebywa przy brzegu w pobliżu zatopionych drzew i korzeni.
        Aktywne w cieplejszych miesiącach, a najlepsze wyniki osiąga się, łowiąc w czystych, spokojnych wodach z dużą ilością naturalnego pokarmu.</string>
    //
    <string name="fish_description_12">Ryba słodkowodna z rodziny karpiowatych, często występująca w stawach i jeziorach.
        Na co łowić: czerwone i białe robaki, rosówki, ochotka, ciasto, chleb, kukurydza i groch.
        Co je: głownie bezkręgowce, rośliny wodne i detrytus.
        Kiedy łapiemy: wiosna, lato i wczesna jesień - wczesny ranek i późne popołudnie - preferuje ciepłe, spokojne wody z mulistym dnem.
        Najaktywniejsze są w cieplejszych miesiącach, a najlepsze wyniki osiąga się, łowiąc w miejsach z dużą ilością naturalnego pokarmu i kryjówek.</string>

    // Podpisy pod obrazki ryb -> FishListScreen.kt
    <string name="fish_image_1">Szczupak</string>
    <string name="fish_image_2">Sum europejski</string>
    <string name="fish_image_3">Węgorz europejski</string>
    <string name="fish_image_4">Leszcz</string>
    <string name="fish_image_5">Lin</string>
    <string name="fish_image_6">Wzdręga</string>
    <string name="fish_image_7">Ukleja</string>
    <string name="fish_image_8">Karp</string>
    <string name="fish_image_9">Krąp</string>
    <string name="fish_image_10">Płoć</string>
    <string name="fish_image_11">Jaź</string>
    <string name="fish_image_12">Karaś pospolity</string>
    // ===============================================================================================

    // ===============================================================================================
    // Podpisy dla FishingCatchActivity.kt:
    <string name="succesful_save">Zapisano połów!</string>
    <string name="check_your_data">Proszę wprowadzić poprawne dane.</string>
    // ===============================================================================================

    // ===============================================================================================
    // Podpisy dla ViewCatchesActivity.kt:
    <string name="correct_ID">Proszę wprowadzić poprawne ID połowu.</string>
    <string name="all_fishing_deleted">Usunięto wszystkie połowy!</string>
    <string name="deleted_fishing_ID">Usunięto połów o ID: </string>
    // ===============================================================================================

</resources>