<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/tutorial_layout"
    tools:context=".ActivityOne">

    <!-- CardView -> szare pole w ktorym wyswietla sie data i pogoda -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonContainer"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center">

            <!-- TextView -> odpowiadajacy za wyswietlanie daty i godziny -->
            <TextView
                android:id="@+id/dateTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#ff2400"
                android:layout_marginBottom="8dp" />

            <!-- TextView -> odpowiadajacy za wyswietlanie pogody -->
            <TextView
                android:id="@+id/weatherTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#ff2400" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- LinearLayout -> wysrodkowanie przyciskow -->
    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Przycisk 1 -> uruchamia pierwsza aktywnosc (ryby,lowiska,przynety) -->
        <Button
            android:id="@+id/buttonBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bar1"
            android:layout_marginBottom="20dp" />

        <!-- Przycisk 2 -> uruchamia druga aktywnosc (kalendarz wedkarski z zewnetrznej strony) -->
        <Button
            android:id="@+id/buttonBar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bar2"
            android:layout_marginBottom="20dp" />

        <!-- Przycisk 3 -> uruchamia trzecia aktywnosc (wiazanie haczyka) -->
        <Button
            android:id="@+id/buttonBar3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bar3"
            android:layout_marginBottom="20dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
